# PyPlusC

./: .gitignore  CHANGES.md  CMakeLists.txt  Plans.md  PyPlusC.sln  README.md
Proposals/: prop-1.md  prop-2.md  prop-3.md  prop-4.md  prop-5.md  prop-6.md  prop-7.md  prop-8.md  template.md
PythonPlus/: PythonPlus.vcxproj  PythonPlus.vcxproj.filters  demo.pyp  main.cpp
PythonPlus/Compiler/: StringReplace.h  Vector2.h
PythonPlus/Compiler/CodeGeneration/: CodeGenerator.cpp  CodeGenerator.h
PythonPlus/Compiler/GlobalData/: BuiltIns.h
PythonPlus/Compiler/Parsing/: Node.cpp  Node.h  NodeType.h  Parser.cpp  Parser.h
PythonPlus/Compiler/Tokenisation/: Lexer.cpp  Lexer.h  Token.h  TokenType.h
PythonPlus/Console/: Colour.h
extensions/visual-studio-code/: pyplus-syntax-1.0.0.vsix
extensions/visual-studio-code/src/: CHANGELOG.md  README.md  language-configuration.json  package.json  pyplus-syntax-1.0.0.vsix  vsc-extension-quickstart.md
extensions/visual-studio-code/src/snippets/: snippets.json
extensions/visual-studio-code/src/syntaxes/: pyp.tmLanguage.json
